Use moditect for apt module