@@ -247,6 +247,9 @@
             <target>${java.version}</target>
             <encoding>${project.build.sourceEncoding}</encoding>
             <showWarnings>true</showWarnings>
+            <compilerArgs>
+              <arg>-proc:full</arg>
+            </compilerArgs>
           </configuration>
         </plugin>
         <plugin>
